# CPP_BufferIOWithFilter

./: README.md  configure  configure.ac
auto-tools/: Makefile.am  Makefile.in
auto-tools/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
auto-tools/example/: Makefile  Makefile.in  fFilter_example.cpp  main_example.cpp
auto-tools/include/: buffer_type.hpp
auto-tools/tests/: Makefile  Makefile.am  Makefile.in  construct_gtest.cpp  read_gtest.cpp  write_gtest.cpp
autom4te.cache/: requests
example/: Makefile.am  fFilter_example.hpp  inFile_example.txt  outFile_example.txt
tests/: Makefile.am  Makefile.in  fixture_gtest.cpp  fixture_gtest.hpp  main_gtest.cpp
