# This file used
AC_PREREQ([2.69])

AC_INIT([buffer_type], [1.0], [domino-trk@yandex.ru])

AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects])

# For init libtool
AM_PROG_AR
LT_INIT

AC_CONFIG_MACRO_DIRS([m4])

# Path to Makefiles
AC_CONFIG_FILES([Makefile
		 tests/Makefile
	 	 example/Makefile
	 	 ])

# The compiler
AC_PROG_CXX

AC_OUTPUT
